<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/background_main"
    android:background="@drawable/background"
    android:scaleType = "centerCrop"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"

        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        fab:titleTextColor="@android:color/white"
        android:background="@color/cardview_shadow_start_color">
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/m_t_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_below="@+id/toolbar2"
        android:layout_centerHorizontal="true"
        android:fontFamily="cursive"
        android:text="@string/m_t_1"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/m_t_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="133dp"
        android:fontFamily="cursive"
        android:text="@string/pref_default_display_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/m_t_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="207dp"
        android:fontFamily="cursive"
        android:text="@string/m_t_2"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="30sp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/button_floating"

        android:layout_width="@dimen/fab_margin"
        android:layout_height="300dp"
        android:layout_alignStart="@+id/m_t_3"
        android:layout_centerVertical="true"
        android:src="@drawable/section_1"
        fab:backgroundTint="@null" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/button_floating_a_1"

        android:layout_width="@dimen/fab_margin"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
        fab:backgroundTint="@null" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/button_floating_a_2"
        android:layout_width="@dimen/fab_margin"
        android:layout_height="300dp"

        android:layout_alignEnd="@+id/m_t_3"
        android:layout_centerVertical="true"
        android:src="@drawable/map"
        fab:backgroundTint="@null" />






</RelativeLayout>
